--- a/28-06/style.css
+++ b/28-06/style.css
@@ -36,7 +36,7 @@ a {
   height: 80vh;
   overflow: scroll;
   display: flex;
-  flex-direction: column;
+  flex-wrap: wrap;
   justify-content: flex-start;
   align-items: center;
 }
@@ -47,6 +47,7 @@ a {
 
 .productCard {
   width: 225px;
+  height: 550px;
   margin: 20px;
   padding: 5px;
   display: flex;
@@ -69,4 +70,17 @@ a {
   background-color: aquamarine;
   border-bottom-left-radius: 25px;
   border-top-right-radius: 25px;
+}
+
+@media only screen and (max-width: 300px) {
+  .mainContent {
+    margin-top: 5px;
+    width: 99vw;
+    height: 80vh;
+    overflow: scroll;
+    display: flex;
+    flex-direction: column;
+    justify-content: flex-start;
+    align-items: center;
+  }
 }
