--- a/07-07/style.css
+++ b/07-07/style.css
@@ -55,9 +55,9 @@ button {
 }
 
 li {
-  width: max-content;
+  max-width: 85vw;
   list-style: none;
-  padding: 20px;
+  padding: 30px 15px;
   margin: 10px;
   background-color: white;
   box-shadow: 0px 10px 15px -3px rgba(0, 0, 0, 0.1);
